     part of vm-pine.el under the name `vm-mime-yank-attachments'.
     That functionality is now obsolete.  Replace references to
     `vm-mime-yank-attachments' in your customization by the new variable.
     
   * The command `vm-flag-message-read' (.) introduced in 8.1.93a is
     renamed to `vm-mark-message-read' for consistency of terminology.

  IMPROVEMENTS

   * Added a variable `vm-verbosity' to control the granularity of
     informative messages displayed by VM.  Levels 5-8 are recommended, with
     8 corresponding to the current level.

   * New operations for manual control of thread indentation for
     dealing with long (and deep) message threads.  See info under
     "Threaded Summaries".

   * A number of "point-to-point" attachment operations have been
     added: 
     - `vm-dired-attach-file' and `vm-dired-do-attach-files' from
     dired buffers.
     - `vm-attach-message-to-composition' and
     `vm-reader-map-attach-to-composition' from VM folders.
     - a drag-and-drop feature that can be used in the window system.

   * New command `vm-switch-to-folder' defined to quickly return to a
     previously buried folder.  (Originally in vm-rfaddons.)

   * New custom command `vm-toggle-best-mime' in vm-rfaddons to toggle
     between 'best and 'best-internal' MIME altrenatives.  (Thanks to
     Alley Stoughton for this addition.)

   * New variable `vm-include-text-basic' can be used to enable the
     fallback method of quoting message text in replies.  It should
     be normally left with the default value of nil.

   * VM refrains from repeatedly checking for new mail once it has
     found some new mail on the spool. Set `vm-mail-check-always' to
     override this behavior.  

   * When a predefined virtual folder is quit, all the component
     folders that it depends on will also be quit automatically.

   * When an interactive virtual folder is quit, the message pointer
     in the virtual folder is transferred to the original folder.